--- a/app/views/Student.html
+++ b/app/views/Student.html
@@ -1,10 +1,23 @@
-<div class="span6">
-    <div class="widget">
-        <div class="widget-header">
-            <h3>系统状态</h3>
-        </div>
-        <div class="widget-content">
-            {{data[0].id}}
-        </div>
-    </div>
+<h4>学生信息</h4>
+<div class="span9">
+    <table class="table table-hover table-striped">
+        <tr>
+            <th>姓名</th>
+            <th>学号</th>
+            <th>班级</th>
+            <th>操作</th>
+        </tr>
+        <tr  ng-repeat="item in data">
+            <td>{{item.name}}</td>
+            <td>{{item.id}}</td>
+            <td>{{item.class}}</td>
+            <td>
+
+               <a class="text-info" href="#">
+                   <i class="icon-align-center icon-pencil"></i>
+               </a>
+            </td>
+
+        </tr>
+    </table>
 </div>
