--- a/app/views/StudentManageAdd.html
+++ b/app/views/StudentManageAdd.html
@@ -82,7 +82,7 @@
             <span class="pull-right">&nbsp&nbsp</span>
             <button ng-click="reset()" class="btn btn-danger pull-right"> Reset</button>
             <span class="pull-right">&nbsp&nbsp</span>
-            <a href="#/StudentsManage"class="btn pull-right">Cancel</a>
+            <a href="#/StudentManage"class="btn pull-right">Cancel</a>
         </div>
 
     </form>
