--- a/app/views/BuildingManage.html
+++ b/app/views/BuildingManage.html
@@ -1,34 +1,36 @@
 <div class="container">
-    <h6>学生信息</h6>
+    <h6>楼栋信息</h6>
     <div class="span9">
         <p>
-            <div class="row">
-                <div class="pull-right">
-                    <a href="#/StudentManage/Add" class="btn btn-info">Create</a>
-                </div>
-                <div class="pull-right">
-                    <input class="search-query input-medium" type="text" placeholder="Search" ng-model="search">
-                </div>
+        <div class="row">
+            <div class="pull-right">
+                <a href="#BuildingManage/Add" class="btn btn-info">Create</a>
             </div>
+            <div class="pull-right">
+                <input class="search-query input-medium" type="text" placeholder="Search" ng-model="search">
+            </div>
+        </div>
         </p>
 
 
         <div>
             <table class="table table-hover table-striped">
                 <tr>
-                    <th>姓名</th>
-                    <th>学号</th>
-                    <th>班级</th>
+                    <th>楼栋</th>
+                    <th>校区</th>
+                    <th>内部区域</th>
                     <th>性别</th>
+                    <th>说明</th>
                     <th>操作</th>
                 </tr>
                 <tr ng-repeat="item in dataSet| filter:search">
                     <td>{{item.name}}</td>
-                    <td>{{item.id}}</td>
-                    <td>{{item.class}}</td>
+                    <td>{{item.zone}}</td>
+                    <td>{{item.innerzone}}</td>
                     <td>{{item.gender}}</td>
+                    <td>{{item.remark}}</td>
                     <td>
-                        <a  href="#/StudentManage/Edit/{{item.id}}">
+                        <a  href="#BuildingManage/Edit/{{item.id}}">
                             <i class="icon-pencil"></i>
                         </a>&nbsp
                         <a  href=""  ng-click="delete(item.id)">
